# ao-projects

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md
.ao/workflows/: common.yaml
.github/workflows/: ci.yml
crates/ao-projects-cli/: Cargo.toml
crates/ao-projects-cli/src/: main.rs
crates/ao-projects-core/: Cargo.toml
crates/ao-projects-core/src/: lib.rs  state.rs
crates/ao-projects-core/src/services/: hub.rs  mod.rs  requirement_service.rs  task_service.rs
crates/ao-projects-core/src/sync/: client.rs  config.rs  mod.rs
crates/ao-projects-core/tests/: requirement_tests.rs  task_tests.rs
crates/ao-projects-mcp/: Cargo.toml
crates/ao-projects-mcp/src/: main.rs  tools.rs
crates/ao-projects-protocol/: Cargo.toml
crates/ao-projects-protocol/src/: common.rs  lib.rs  query.rs  requirement.rs  task.rs
crates/ao-projects-protocol/tests/: parse_tests.rs
crates/ao-projects-store/: Cargo.toml
crates/ao-projects-store/src/: io.rs  lib.rs  scope.rs
