[workspace]
resolver = "2"
members = [
    "crates/ao-projects-protocol",
    "crates/ao-projects-core",
    "crates/ao-projects-store",
    "crates/ao-projects-cli",
    "crates/ao-projects-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/launchpadapps/ao-projects"
description = "Standalone task and requirements management for AI-driven development pipelines"

[workspace.dependencies]
ao-projects-protocol = { path = "crates/ao-projects-protocol" }
ao-projects-core = { path = "crates/ao-projects-core" }
ao-projects-store = { path = "crates/ao-projects-store" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "0.1", features = ["server", "transport-stdio"] }
