[package]
name = "ao-projects-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core service layer: task and requirement CRUD, state machines, filtering, query"

[dependencies]
ao-projects-protocol = { workspace = true }
ao-projects-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
