[package]
name = "ao-projects-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atomic file-based JSON storage with locking and scoped state paths"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sha2 = "0.10"
dirs = "6"
